--- a/worksheet6/CMakeLists.txt
+++ b/worksheet6/CMakeLists.txt
@@ -17,6 +17,10 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        ModelPart.cpp
+        ModelPart.h
+        ModelPartList.cpp
+        ModelPartList.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
