--- a/worksheet6/CMakeLists.txt
+++ b/worksheet6/CMakeLists.txt
@@ -29,6 +29,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         icons.qrc
+        optiondialog.h optiondialog.cpp optiondialog.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET WS6 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
