--- a/.github/workflows/doxygen-deploy.yml
+++ b/.github/workflows/doxygen-deploy.yml
@@ -2,15 +2,14 @@ name: doxygen-deploy
 
 on:
   push:
-    branches:
-      - master  # 仅当 master 分支有更新时触发
+    branches: [ master ]
 
 jobs:
   deploy-documentation:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Install Doxygen and Graphviz
@@ -23,5 +22,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
-          branch: gh-pages                # 部署目标分支
-          folder: GroupWork/docs/html               # Doxygen 输出目录（根据你的 OUTPUT_DIRECTORY）
+          branch: gh-pages
+          folder: GroupWork/docs/html
+          token: ${{ secrets.GITHUB_TOKEN }}
